--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
-<body class="bg-slate-950 min-h-screen text-slate-100 transition-colors duration-500">
-  <div id="root"></div>
-
-  <!-- ✅ THIS WAS MISSING -->
-  <script type="module" src="/index.tsx"></script>
-</body>
+<script>
+  tailwind.config = {
+    darkMode: 'class',
+    theme: {
+      extend: {
+        boxShadow: {
+          '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
+        }
+      }
+    }
+  }
+</script>
+<script src="https://cdn.tailwindcss.com"></script>
