--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
-<script>
-  tailwind.config = {
-    darkMode: 'class',
-    theme: {
-      extend: {
-        boxShadow: {
-          '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TrustReply AI - Income Tax Notice Assistant</title>
+
+  <!-- Load Tailwind FIRST -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- THEN configure Tailwind -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          boxShadow: {
+            '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
+          }
         }
       }
     }
+  </script>
+
+  <!-- Font Awesome -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+
+  <!-- jsPDF -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+  <!-- ESM IMPORT MAP (PRODUCTION) -->
+  <script type="importmap">
+  {
+    "imports": {
+      "react": "https://esm.sh/react@19.2.3?production",
+      "react-dom/client": "https://esm.sh/react-dom@19.2.3/client?production",
+      "@google/genai": "https://esm.sh/@google/genai@1.35.0?production"
+    }
   }
-</script>
-<script src="https://cdn.tailwindcss.com"></script>
+  </script>
+
+</head>
+
+<body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 transition-colors duration-300">
+  <div id="root"></div>
+
+  <!-- React entry -->
+  <script type="module" src="/index.tsx"></script>
+</body>
+</html>
