--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TrustReply AI - Income Tax Notice Assistant</title>
 
-  <!-- Load Tailwind FIRST -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- THEN configure Tailwind -->
+  <!-- ✅ Tailwind CDN CONFIG (MUST BE FIRST, USING window.tailwind) -->
   <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          boxShadow: {
-            '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
+    window.tailwind = {
+      config: {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            boxShadow: {
+              '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
+            }
           }
         }
       }
     }
   </script>
+
+  <!-- ✅ Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Font Awesome -->
   <link
@@ -31,7 +33,7 @@
   <!-- jsPDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-  <!-- ESM IMPORT MAP (PRODUCTION) -->
+  <!-- ESM IMPORT MAP (PRODUCTION SAFE) -->
   <script type="importmap">
   {
     "imports": {
@@ -41,7 +43,6 @@
     }
   }
   </script>
-
 </head>
 
 <body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 transition-colors duration-300">
