--- a/index.html
+++ b/index.html
@@ -2,53 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TrustReply AI - Income Tax Notice Assistant</title>
+  <title>TrustReply AI</title>
 
-  <!-- ✅ Tailwind CDN CONFIG (MUST BE FIRST, USING window.tailwind) -->
   <script>
-    window.tailwind = {
-      config: {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            boxShadow: {
-              '3xl': '0 35px 60px -15px rgba(0, 0, 0, 0.3)',
-            }
-          }
-        }
-      }
-    }
+    window.tailwind = { config: { darkMode: "class" } };
   </script>
-
-  <!-- ✅ Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
-
-  <!-- jsPDF -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-  <!-- ESM IMPORT MAP (PRODUCTION SAFE) -->
   <script type="importmap">
   {
     "imports": {
-      "react": "https://esm.sh/react@19.2.3?production",
-      "react-dom/client": "https://esm.sh/react-dom@19.2.3/client?production",
-      "@google/genai": "https://esm.sh/@google/genai@1.35.0?production"
+      "react": "https://esm.sh/react@19.2.3",
+      "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
+      "@google/genai": "https://esm.sh/@google/genai@1.35.0"
     }
   }
   </script>
 </head>
 
-<body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 transition-colors duration-300">
+<body>
   <div id="root"></div>
-
-  <!-- React entry -->
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
